Added a section at the end of the document about how to use RADDOSE-3D to get dose estimates for SAXS experiments.

--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -482,4 +482,23 @@ translation of the goniometer during exposure in \hbox{\textmu}m$/^{\circ}$ for 
 
 the offset in \hbox{\textmu}m along \textit{X} (vertical in most set-ups) between the beam axis and the rotation axis. Used to create 'offset' scanning for improvements in dose distribution. Defaults to 0 \hbox{\textmu}m.
 
+\newpage
+
+\section{\RD for SAXS}
+
+\RD can be used to give dose estimates for SAXS experiments. Given the protein concentration all that is required is to calculate the number of molecules in a given volume. This is equivalent to finding the number of monomers in a unit cell volume for a crystal. An example of the required calculation is given for (mouse) glucose isomerase:
+
+Glucose isomerase (mouse) has 558 amino acids. The atomic mass for each amino acid can be used to accurately find the total atomic mass but for demonstration purposes we will use the fact that an amino acid is roughly 110 daltons. This gives a total molecular mass for the protein as $558 \times 110 = 61380$ daltons or $61380\,grams/mole$. Using the protein concentration in the SAXS experiment, here we will use a concentration of $2\,grams/litre$ the molarity of the solution can be calculated: 
+\begin{equation}
+molarity = \frac{2\,grams/mole}{61380\,grams/litre} = 3.26 \times 10^{-5}\,M
+\end{equation} 
+Now it is necessary to choose the dimensions for an arbitrary volume such that the volume will contain at least 1 molecule.
+For simplicity a 1000\AA$^3$ volume is chosen. Converting this volume to litres yields 1000\AA$^3$ = $1 \times 10^{-18}\,L$. Multiplying this volume by the molarity of the solution calculate earlier gives the number of moles - $3.26 \times 10^{-5}\,M \times 1 \times 10^{-18}\,L = 3.26 \times 10^{-23} moles$.
+
+Finally the number of molecules in the chosen volume is given by multiplying the number of moles by Avogadro's number ($\approx 6.02 \times 10^{23}\,moles^{-1})$. Hence in this example, the number of molecules in the chosen volume is $3.26 \times 10^{-23} \times 6.02 \times 10^{23} = 19.63$. Since the input for the number of monomers is required to be an integer this value is rounded to 20 molecules per unit chose volume.
+
+Therefore in the \RD input file the input line for the \Keyword{NUMMONOMERS} would be ``\Keyword{NUMMONOMERS} 20'' and the input for the unit cell would be \Keyword{UNITCELL} would be ``\Keyword{UNITCELL} 1000 1000 1000''.
+
+Generally in a SAXS experiment the protein solution is passed through a cylindrical capillary. This shape can only be explicitly modelled in RADDOSE-3D as a \hyperref[crystaltype]{\Keyword{POLYHEDRON}} object. This can be modelled and exported using \href{http://www.blender.org/}{\textbf{BLENDER}}.
+
 \end{document}
