--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -52,16 +52,31 @@
 %\addtolength{\textheight}{1in}
 \begin{center}
 \noindent \textsf{\huge\textbf{\RD Command Reference}}\\[0.3em]
-Beta version 1.3 -- 19 February 2015\\[3.5em]
+Dated: 1 May 2018\\[3.5em]
 \end{center}
 
 \noindent
-Please cite the following publication when using \RD:\\[0.4em]
+Please cite the following primary publication when using \RD:\\[0.4em]
 \href{http://dx.doi.org/10.1107/S0021889813011461}{\large\textbf{\RD: time- and space-resolved modelling\\[0.0em] of dose in macromolecular crystallography}}\\[0.1em]
 \href{http://dx.doi.org/10.1107/S0021889813011461}{Zeldin, O. B.; Gerstel, M. \& Garman, E. F. (2013). \textit{J. Appl. Cryst.} \textbf{46} %, ??--??
 }\\[0.1em]
 \href{http://dx.doi.org/10.1107/S0021889813011461}{doi:10.1107/S0021889813011461}
 \\[1.5em]
+\noindent
+For dose calculations related to SAXS experiments, please cite:\\[0.4em]
+\href{https://doi.org/10.1107/S1600577516015083}{\large\textbf{Development of tools to automate quantitative analysis of radiation damage in SAXS experiments}}\\[0.1em]
+\href{https://doi.org/10.1107/S1600577516015083}{Brooks-Bartlett, J. C.; Batters, R. A.; Bury, C. S.; Lowe, E. D.; Ginn, H. M.; Round, A., \& Garman, E. F. (2017). \textit{J. Synch. Rad.} \textbf{24} %, ??--??
+}\\[0.1em]
+\href{https://doi.org/10.1107/S1600577516015083}{doi:10.1107/S1600577516015083}
+\\[1.5em]
+\noindent
+For more recent developments in \RD, including the ability to incorporate experimental profiles and irregular polyhedral crystal geometries, as well as the inclusion of  models for energy loss from the crystal volume due to the Compton effect and photoelectron escape, please additionally refer to:\\[0.4em]
+\href{https://doi.org/10.1002/pro.3302}{\large\textbf{Estimate your dose: \RD}}\\[0.1em]
+\href{https://doi.org/10.1002/pro.3302}{Bury, C. S.; Brooks-Bartlett, J. C.; Walsh, S. P. \& Garman, E. F. (2018). \textit{Protein Science} \textbf{27} %, ??--??
+}\\[0.1em]
+\href{https://doi.org/10.1002/pro.3302}{doi:10.1002/pro.3302}
+\\[1.5em]
+
 \tableofcontents
 
 %\doublespacing
@@ -439,6 +454,17 @@ This keyword only has an effect when the absorption and attenuation coefficients
 
 The protein concentration used in the SAXS experiment in grams per litre.
 
+\subsection{\Keyword{CALCULATEPEESCAPE}}
+\label{calculatepeescape}
+
+\noindent \Keyword{CALCULATEPEESCAPE \textit{BOOLEAN}}
+Whether or not to include an explicit 3D model for photoelectron escape from the crystal volume. Set to \Keyword{\textit{TRUE}} to include or \Keyword{\textit{FALSE}} otherwise (defaults to \Keyword{\textit{FALSE}} if not set). 
+
+\subsection{\Keyword{CALCULATEFLESCAPE}}
+\label{calculateflescape}
+
+\noindent \Keyword{CALCULATEFLESCAPE \textit{BOOLEAN}}
+Whether or not to include an explicit 3D model for fluorescent X-ray escape from the crystal volume. Set to \Keyword{\textit{TRUE}} to include or \Keyword{\textit{FALSE}} otherwise (defaults to \Keyword{\textit{FALSE}} if not set).
 
 \label{RDv3End}
 
