--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -314,7 +314,7 @@ The use of these keywords is described in the sections \ref{RDv3Start}--\ref{RDv
 
 \noindent \Keyword{ABSCOEFCALC EXP}
 
-This command should be used if the crystal composition from a Protein Data Bank (PDB) entry is to be used instead of a user specified crystal composition. The current RADDOSE-3D code is then used to calculate the absorption and attenuation coefficients using the crystal composition from the PDB entry. The PDB entry must be specified using the (\hyperref[pdb]{\Keyword{PDB} keyword} - section \hyperref[pdb]{section~\ref*{pdb}}).\SB
+This command should be used if the crystal composition from a Protein Data Bank (PDB) entry is to be used instead of a user specified crystal composition. The current RADDOSE-3D code is then used to calculate the absorption and attenuation coefficients using the crystal composition from the PDB entry. The PDB entry must be specified using the \hyperref[pdb]{\Keyword{PDB} keyword} (\hyperref[pdb]{section~\ref*{pdb}}).\SB
 
 \noindent \Keyword{ABSCOEFCALC SEQUENCE}
 
@@ -331,9 +331,21 @@ This command will use the current RADDOSE-3D code to calculate the absorption an
 \newline
 Note that RADDOSE-3D treats the irradiated samples as stationary objects. Therefore if the SAXS solution is flowed through the capillary during the exposure then a suitable exposure time for the relevant volume will need to be taken into account.\SB
 
+
 \noindent \Keyword{ABSCOEFCALC SAXSSEQ}
 
-This command will use the current RADDOSE-3D code to calculate the absorption and attenuation coefficients using the sample composition specified by the user similarly to the keyword \Keyword{SAXS}. The major difference is that you no longer need to give the number of residues or the protein heavy atom composition. Instead the user needs to specify where the sequence file is located using the \Keyword{SEQFILE}.
+This command will use the current RADDOSE-3D code to calculate the absorption and attenuation coefficients using the sample composition specified by the user similarly to the keyword \Keyword{SAXS}. The major difference is that you no longer need to give the number of residues or the protein heavy atom composition. Instead the user needs to specify where the sequence file is located using the \Keyword{SEQFILE}.\SB
+
+
+\noindent \Keyword{ABSCOEFCALC SMALLMOLE}
+
+This command will use the current RADDOSE-3D code to calculate the absorption and attenuation coefficients using the crystal composition specified by the user, similarly to the keyword \Keyword{RD3D} above. However, this indicates that a small molecule experiment is present, and as such the user must instead specify the composition of the crystal using the keywords \Keyword{SmallMoleAtoms} and \Keyword{UnitCell} to explicitly define the entire contents of the small molecule unit cell (including solvent atoms).\SB
+
+
+\noindent \Keyword{ABSCOEFCALC CIF}
+
+This option is also provided for small molecule experiments. This command should be used if the crystal composition from a supplied CIF-format file is to be used instead of a user specified crystal composition. The current RADDOSE-3D code is then used to calculate the absorption and attenuation coefficients using the crystal composition from the CIF entry. A full file path to the CIF-format file must be specified using the additional \hyperref[cif]{\Keyword{CIF} keyword}  (\hyperref[cif]{section~\ref*{cif}}).
+
 
 \subsection{\Keyword{PDB}}
 \label{pdb}
@@ -355,6 +367,11 @@ It will NOT calculate \hyperref[solventheavyconc]{\Keyword{SOLVENTHEAVYCONC}} so
 
 \Keyword{SEQFILE \textit{FILENAME}} specifies the location of the file that contains the sequence of the chosen sample.
 Only sequence files in the \href{https://en.wikipedia.org/wiki/FASTA_format}{\textbf{FASTA}} format can be read. \SB
+
+\subsection{\Keyword{CIF}}
+\label{cif}
+
+\Keyword{CIF \textit{FILENAME}} specifies the location of the file that contains the sequence of the chosen sample. This is exclusively for small molecule experiments and only files in the \href{https://en.wikipedia.org/wiki/Crystallographic_Information_File}{\textbf{CIF}} format can be read. \SB
 
 \subsection{\Keyword{UNITCELL}}
 \label{RDv3Start}
@@ -421,7 +438,7 @@ The default value for \textit{I} is 0.
 \RDLegacyKeyword
 
 \noindent \Keyword{PROTEINHEAVYATOMS \textit{El I} (\textit{El I} (\textit{El I} ..))}
-defines a list of atoms to add to the protein part of the absorption. Each species is defined by a two character string \textit{El} for the elemental symbol, and an integer number \textit{I} of atoms of that species per monomer.
+defines a list of atoms to add to the protein part of the absorption. Each species is defined by a two character string \Keyword{\textit{El}} for the elemental symbol, and an integer number \Keyword{\textit{I}} of atoms of that species per monomer.
 
 The command \Keyword{PROTEINHEAVYATOMS S 10 Se 2} would add 10 sulfur and 2 selenium atoms per monomer.
 
@@ -453,6 +470,16 @@ This keyword only has an effect when the absorption and attenuation coefficients
 \noindent \Keyword{PROTEINCONC \textit{F}}
 
 The protein concentration used in the SAXS experiment in grams per litre.
+
+
+\subsection{\Keyword{SMALLMOLEATOMS}}
+\label{amallmoleatoms}
+This keyword only has an effect when the absorption and attenuation coefficients are estimated using the keyword \Keyword{SMALLMOLE} \hyperref[abscoefcalc]{section \ref*{abscoefcalc}\SB} and is only to be used for small molecule experiments
+
+\noindent \Keyword{SMALLMOLEATOMS \textit{El I} (\textit{El I} (\textit{El I} ..))}
+defines a list of atoms to explicitly define the full contents of the unit cell. Each species is defined by a two character string \Keyword{\textit{El}} for the elemental symbol, and an integer number \Keyword{\textit{I}} of atoms of that species per unit cell.
+
+The command \Keyword{SMALLMOLEATOMS C 18 H 15 Bi 8} would add 18 carbon 15 hydrogen and 8 bismuth atoms per unit cell.
 
 \subsection{\Keyword{CALCULATEPEESCAPE}}
 \label{calculatepeescape}
